feat: add continer exec stop and remove

--- a/akt-docker/.vscode/settings.json
+++ b/akt-docker/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "go.toolsEnvVars": {"GOOS" : "linux"}
+  "go.toolsEnvVars": {
+    "CGO_ENABLED": "1",
+    "CC": "gcc",
+    "GOOS": "linux"
+  }
 }
